# plantocode

./: .cursorrules  .env.example  .gitignore  LICENSE  PROGRESS-REPORT.md  README-sqlite-migration.md  README.md  cleanup.sh  components.json  debug-billing.js  debug-response-parser.rs  next.config.mjs  package.json  postcss.config.js  postcss.config.mjs  session_manager_fix_plan.md  tailwind.config.js  tailwind.config.ts  tsconfig.json
desktop/src-tauri/: .env.example  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.mobile.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json  desktop-default.json  featurebase.json  macos.json  mobile.json  plantocode-api.json  vibe-api.json  windows.json
desktop/src-tauri/migrations/: README.md  consolidated_schema.sql  migrate_default_system_prompts_pk.sql  migration_rules.json
desktop/src-tauri/migrations/cleanup/: normalize_history_device_ids.sql
desktop/src-tauri/migrations/features/: 004_terminal_output_log.sql  005_terminal_sessions_rebuild.sql  006_terminal_sessions_status_update.sql  007_terminal_sessions_fix_schema.sql  add_error_logs.sql  add_history_versions.sql  add_merge_instructions.sql  app_settings.sql  history_state_v1.sql  terminal_sessions.sql  terminal_sessions_upgrade.sql
desktop/src-tauri/scripts/: migrate.sh
desktop/src-tauri/src/: commands.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs
desktop/src-tauri/src/api_clients/: billing_client.rs  client_factory.rs  client_trait.rs  codex_cli_client.rs  consent_client.rs  error_handling.rs  mod.rs  proxy_request_helper.rs  routed_api_client.rs  server_proxy_client.rs
desktop/src-tauri/src/app_setup/: config_init.rs  database.rs  embedded_schema.rs  file_management.rs  job_system.rs  mod.rs  services.rs
desktop/src-tauri/src/auth/: auth0_state.rs  device_id_manager.rs  header_utils.rs  mod.rs  secure_storage_trait.rs  stronghold_storage.rs  token_introspection.rs  token_manager.rs  token_persistence.rs  token_refresh.rs
desktop/src-tauri/src/commands/: README.md  account_commands.rs  app_commands.rs  audio_commands.rs  auth0_commands.rs  auth_commands.rs  backup_commands.rs  billing_commands.rs  billing_health_commands.rs  config_cache_commands.rs  config_commands.rs  consent_commands.rs  database_maintenance_commands.rs  db_commands.rs  device_commands.rs  disk_commands.rs  error_recovery_commands.rs  featurebase_commands.rs  fetch_handler_command.rs  ffmpeg_commands.rs  file_finder_workflow_commands.rs  file_system_commands.rs  generic_task_commands.rs  geo_commands.rs  guidance_commands.rs  image_commands.rs  (+23 more)
server/: .dockerignore  .env.example  .env.sqlx  Cargo.toml  Cross.toml  Dockerfile  README.md  package.json  test_subscription_features.rs  tsconfig.json
server/docs/: api-proxy.md
server/migrations/: 20251123090913_create_api_keys_table.sql  add_api_keys_table.sql  add_max_prompt_length.sql  consolidated_schema.sql  data_app_configs.sql  data_estimation_coefficients.sql  data_model_mappings.sql  data_models.sql  data_providers.sql  data_system_prompts.sql  device_registry_schema.sql  enhanced_web_search_prompts.sql  web-search-examples.md
server/scripts/: migrate.sh  run-migrations.sh  seed_onboarding_config.sql
server/src/: auth_stores.rs  lib.rs  main.rs  routes.rs
server/src/api_contract/: common.rs  devices.rs  mod.rs
server/src/clients/: anthropic_client.rs  google_client.rs  groq_client.rs  mod.rs  open_router_client.rs  openai_client.rs  replicate_client.rs  usage_extractor.rs  xai_client.rs
server/src/config/: mod.rs  settings.rs
server/src/db/: connection.rs  mod.rs  pool_ext.rs
server/src/error/: mod.rs
server/src/handlers/: auth0_handlers.rs  background_job_handlers.rs  billing_handlers.rs  cancellation_handlers.rs  config_handlers.rs  consent_handlers.rs  credit_handlers.rs  deployment_status.rs  device_handlers.rs  featurebase_handlers.rs  health.rs  hybrid_auth_handlers.rs  mod.rs  model_handlers.rs  notification_handlers.rs  provider_handlers.rs  provider_transformers.rs  proxy_handlers.rs  region_handlers.rs  spending_handlers.rs  streaming_handler.rs  system_prompts_handlers.rs  usage_handlers.rs
server/src/middleware/: api_key_auth.rs  auth_types.rs  jwt_validation.rs  mod.rs  rate_limiting.rs  secure_auth.rs  unified_auth.rs
server/src/models/: auth_jwt_claims.rs  authenticated_user.rs  billing.rs  consent.rs  error_details.rs  mod.rs  model_pricing.rs  region.rs  runtime_config.rs  standardized_usage_response.rs  stream_event.rs  usage_metadata.rs
server/src/routes/: mod.rs
server/src/security/: api_key_hashing.rs  encryption.rs  key_management.rs  mod.rs  rls_session_manager.rs  rls_session_manager_test.rs  token_binding.rs
server/src/services/: apns_service.rs  audit_service.rs  billing_service.rs  consent_service.rs  cost_based_billing_service.rs  cost_resolver.rs  credit_service.rs  db_pool_monitor.rs  device_connection_manager.rs  device_link_ws.rs  email_notification_service.rs  mod.rs  model_mapping_service.rs  pending_charge_manager.rs  pending_command_queue.rs  price_sync_service.rs  proxy_service.rs  reconciliation_service.rs  relay_session_store.rs  request_tracker.rs  stripe_service.rs  usage_processing_service.rs
server/src/streaming/: mod.rs  sse_adapter.rs  stream_handler.rs  transformers.rs
server/src/stripe_types/: billing_portal_session.rs  charge.rs  checkout_session.rs  customer.rs  enums.rs  event.rs  expandable.rs  invoice.rs  mod.rs  payment_intent.rs  payment_method.rs  price.rs  product.rs  search_result.rs  setup_intent.rs  subscription.rs
server/src/utils/: admin_alerting.rs  error_handling.rs  financial_validation.rs  http_client.rs  image_fetcher.rs  mime_utils.rs  mod.rs  multipart_utils.rs  stream_debug_logger.rs  stripe_currency_utils.rs  stripe_portal_utils.rs  token_estimator.rs  transcription_validation.rs  vision_capabilities.rs  vision_normalizer.rs  vision_validation.rs
server/src/web_auth_assets/: auth0_callback.html  login.html  login.js
(+2523 files in other folders)
