[package]
name = "vibe-manager-server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies.bigdecimal]
version = "0.4.8"
features = ["serde"]

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "macros", "bigdecimal", "ipnetwork"] }
tokio = { version = "1.45.1", features = ["full"] }

# Authentication
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
base64 = "0.22.1"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_cbor = "0.11.2"
serde_with = "3.12.0"

# Environment variables
dotenv = "0.15.0"

# Logging
log = "0.4.26"
log4rs = "1.3.0"
env_logger = "0.11.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# UUID
uuid = { version = "1.17.0", features = ["v4", "serde"] }
# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# Async traits
async-trait = "0.1.77"

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }

# Token estimation
tiktoken-rs = "0.7.0"

# Email service

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.97"

# Utils
futures-util = "0.3.31"
sha2 = "0.10.8"
md5 = "0.8.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
regex = "1.10.5"
rand = "0.9.1"
url = "2.5.4"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.10.1"
dashmap = "6.1.0"
tera = "1.20.0"
ipnetwork = "0.21.1"
tempfile = "3.20.0"

# Redis for distributed rate limiting
redis = { version = "0.32.2", features = ["tokio-comp", "connection-manager"] }

# Cron scheduling for reconciliation
tokio-cron-scheduler = "0.14.0"

hmac = "0.12.1"
hex = "0.4.3"
subtle = "2.5.0"
aes-gcm = "0.10.3"
actix-web-lab = "0.24.2"
eventsource-stream = "0.2.3"
pin-project-lite = "0.2.16"

[features]
default = []
prepare-db = []

[dev-dependencies]
mockito = "1.0.2"
pretty_assertions = "1.3.0"
proptest = "1.5.0"
tokio-test = "0.4.4"
