[package]
name = "plantocode-server"
version = "0.3.19"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies.bigdecimal]
version = "0.4.10"
features = ["serde"]

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "macros", "bigdecimal", "ipnetwork"] }
tokio = { version = "1.49.0", features = ["full"] }

# Authentication
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
base64 = "0.22.1"

# Serialization/Deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_cbor = "0.11.2"
serde_with = "3.16.1"

# Environment variables
dotenv = "0.15.0"

# Logging
log = "0.4.29"
log4rs = "1.4.0"
env_logger = "0.11.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# UUID
uuid = { version = "1.19.0", features = ["v4", "serde"] }
# Date and time
chrono = { version = "0.4.43", features = ["serde"] }

# Async traits
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.12.28", features = ["json", "multipart", "stream"] }

# Token estimation
tiktoken-rs = "0.9.1"

# Email service

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Utils
futures-util = "0.3.31"
sha2 = "0.10.9"
md5 = "0.8.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
regex = "1.12.2"
rand = "0.9.2"
url = "2.5.8"
urlencoding = "2.1.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.0"
dashmap = "7.0.0-rc.2"
ipnetwork = "0.21.1"
tempfile = "3.24.0"

# Redis for distributed rate limiting
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }

# Cron scheduling for reconciliation
tokio-cron-scheduler = "0.15.1"

hmac = "0.12.1"
hex = "0.4.3"
subtle = "2.6.1"
aes-gcm = "0.10.3"
actix-web-lab = "0.24.3"
eventsource-stream = "0.2.3"
pin-project-lite = "0.2.16"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
native-tls = "0.2.14"
actix = "0.13.5"
actix-web-actors = "4.3.1+deprecated"

[features]
default = []
prepare-db = []

[dev-dependencies]
mockito = "1.7.1"
pretty_assertions = "1.4.1"
proptest = "1.9.0"
tokio-test = "0.4.5"
