[package]
name = "vibe-manager"
version = "0.1.0"
description = "Vibe Manager Desktop"
authors = ["kka"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["config-json5"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tauri-plugin-http = "2.4.4"
keyring = "3.6.2"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-store = "2.2.0"
blake2b_simd = "1.0.3"
argon2 = "0.5.3"
env_logger = "0.11.8"
log = "0.4.27"
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["std_rng"] }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
url = "2.5.4"
urlencoding = "2.1.3"
thiserror = "2.0.12"
base64 = "0.22.1"
dirs = "6.0.0"
async-trait = "0.1.88"
futures = "0.3.31"
regex = "1.11.1"
git2 = "0.20.2"
glob = "0.3.2"
once_cell = "1.21.3"
bigdecimal = "0.4"
async-recursion = "1.1.1"
quick-xml = { version = "0.37.5", features = ["serialize", "encoding"] }
sha2 = "0.10.8"
md5 = "0.7.0"
tracing = "0.1"
heck = "0.5"
tiktoken-rs = "0.7.0"

[features]

[lints.rust]
unsafe_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unreachable_code = "warn"
dead_code = "warn"
# Temporarily remove missing_docs until codebase is fully documented
# missing_docs = "warn"
unused_must_use = "warn"
deprecated = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
nursery = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
needless_update = "warn"
redundant_closure_for_method_calls = "warn"
enum_glob_use = "warn"
if_not_else = "warn"

# Remove incorrect workspace.lints section
# rustflags should be set in .cargo/config.toml instead