[package]
name = "vibe-manager"
version = "1.0.16"
description = "Vibe Manager Desktop"
authors = ["kka"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
dotenvy = "0.15.7"

[dependencies]
tauri = { version = "2.7.0", features = ["config-json5", "protocol-asset"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tauri-plugin-http = "2.5.1"
keyring = "3.6.3"
tauri-plugin-single-instance = "2.3.1"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.3.0"
blake2b_simd = "1.0.3"
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15.7"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rand = { version = "0.9.2", features = ["std_rng"] }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
url = "2.5.4"
urlencoding = "2.1.3"
thiserror = "2.0.12"
base64 = "0.22.1"
dirs = "6.0.0"
async-trait = "0.1.88"
futures = "0.3.31"
regex = "1.11.1"
fancy-regex = "0.16.1"
git2 = "0.20.2"
glob = "0.3.2"
once_cell = "1.21.3"
bigdecimal = "0.4.8"
async-recursion = "1.1.1"
quick-xml = { version = "0.38.0", features = ["serialize", "encoding"] }
sha2 = "0.10.8"
md5 = "0.8.0"
tracing = "0.1.41"
heck = "0.5"
tiktoken-rs = "0.7.0"
bytes = "1.10.1"
semver = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"

[lints.rust]
unsafe_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unreachable_code = "warn"
dead_code = "warn"
# Temporarily remove missing_docs until codebase is fully documented
# missing_docs = "warn"
unused_must_use = "warn"
deprecated = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
nursery = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
needless_update = "warn"
redundant_closure_for_method_calls = "warn"
enum_glob_use = "warn"
if_not_else = "warn"

# Remove incorrect workspace.lints section
# rustflags should be set in .cargo/config.toml instead