[package]
name = "plantocode"
version = "1.2.4"
description = "PlanToCode Desktop"
authors = ["kka"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
dotenvy = "0.15.7"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
tauri = { version = "2.9.1", features = ["config-json5", "protocol-asset", "tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
diffy = "0.4.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tauri-plugin-http = "2.5.2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
blake2b_simd = "1.0.3"
env_logger = "0.11.8"
log = "0.4.28"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rand = { version = "0.9.2", features = ["std_rng"] }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
url = "2.5.4"
urlencoding = "2.1.3"
thiserror = "2.0.12"
base64 = "0.22.1"
dirs = "6.0.0"
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.12.2"
fancy-regex = "0.16.2"
glob = "0.3.3"
once_cell = "1.21.3"
bigdecimal = "0.4.9"
async-recursion = "1.1.1"
quick-xml = { version = "0.38.3", features = ["serialize", "encoding"] }
sha2 = "0.10.9"
tracing = "0.1.41"
heck = "0.5.0"
tiktoken-rs = "0.7.0"
semver = "1.0"
which = "8.0.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
hostname = "0.4"
tauri-plugin-autostart = "2.3.0"
tauri-plugin-notification = "2.3.0"
sysinfo = "0.30.13"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-updater = "2.9.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_SystemInformation", "Win32_Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2.3.1"
portable-pty = "0.9.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
git2 = "0.20.2"

[lints.rust]
unsafe_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unreachable_code = "warn"
dead_code = "warn"
# Temporarily remove missing_docs until codebase is fully documented
# missing_docs = "warn"
unused_must_use = "warn"
deprecated = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
nursery = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
needless_update = "warn"
redundant_closure_for_method_calls = "warn"
enum_glob_use = "warn"
if_not_else = "warn"

# Remove incorrect workspace.lints section
# rustflags should be set in .cargo/config.toml instead